perf: add font-display option to avoid font-swap when takes too long

--- a/static/fonts/roboto/roboto.css
+++ b/static/fonts/roboto/roboto.css
@@ -3,6 +3,7 @@
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
+  font-display: fallback;
   font-weight: 400;
   src: local('Roboto'), local('Roboto-Regular'),
        url('./roboto-v20-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -13,6 +14,7 @@
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
+  font-display: fallback;
   font-weight: 700;
   src: local('Roboto Bold'), local('Roboto-Bold'),
        url('./roboto-v20-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
